tests/macros/macro_template_strict_unknown.compile.expected
error: macro 'strict_unknown' references argument 'missing_symbol', but the argument is not available
  --> macro_template_strict_unknown.sl:13:2
     |
  13 |   strict_unknown puti cr
     |  ^^^^^^^^^^^^^^

1 error(s) emitted
